--- a/src/main/resources/assets/conveyance/lang/en_us.json
+++ b/src/main/resources/assets/conveyance/lang/en_us.json
@@ -3,16 +3,16 @@
 	
 	"block.conveyance.alternator": "Alternator",
 	"block.conveyance.splitter": "Splitter",
-	"block.conveyance.inserter": "Inserter",
-	"block.conveyance.inserter_fast": "Fast Inserter",
+	"block.conveyance.inserter": "Item Robot",
+	"block.conveyance.inserter_fast": "Fast Item Robot",
 	"block.conveyance.conveyor": "Conveyor",
-	"block.conveyance.conveyor_vertical": "Vertical Conveyor",
+	"block.conveyance.conveyor_vertical": "Vertical Conveyor (Up)",
 	"block.conveyance.conveyor_vertical_down": "Vertical Conveyor (Down)",
 	"block.conveyance.fast_conveyor": "Fast Conveyor",
-	"block.conveyance.fast_conveyor_vertical": "Fast Vertical Conveyor",
+	"block.conveyance.fast_conveyor_vertical": "Fast Vertical Conveyor (Up)",
 	"block.conveyance.fast_conveyor_vertical_down": "Fast Vertical Conveyor (Down)",
 	"block.conveyance.express_conveyor": "Express Conveyor",
-	"block.conveyance.express_conveyor_vertical": "Express Vertical Conveyor",
+	"block.conveyance.express_conveyor_vertical": "Express Vertical Conveyor (Up)",
 	"block.conveyance.express_conveyor_vertical_down": "Express Vertical Conveyor (Down)",
 	"block.conveyance.catwalk": "Catwalk",
 	"block.conveyance.catwalk_stairs": "Catwalk Stairs",
